--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "save-svg-as-png": "^1.4.5"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.2",
+    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.2"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
